# NNEngine

./: .gitignore  CMakeLists.txt  README.md  convTesting.cpp  dataScriptCSVGen.sh  main.cpp  recurrentTesting.cpp  structureTesting.cpp  testGenerator.cpp
CUDA/: CUDAUtils.cu  CUDAUtils.cuh
LearningModels/: Backpropagation.cpp  Backpropagation.h
Network/: Bitmap.cpp  Bitmap.h  Network.cpp  Network.h
Network/layers/: BatchNormalizationLayer.cpp  BatchNormalizationLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  FFLayer.cpp  FFLayer.h  FlatteningLayer.cpp  FlatteningLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  OutputLayer.cpp  OutputLayer.h  RandomInitiable.h
Network/layers/ActivationLayers/: ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
Network/layers/ActivationLayers/ReLU/: ReLU.cpp  ReLU.h
Network/layers/ActivationLayers/Sigmoid/: Sigmoid.cpp  Sigmoid.h
Network/layers/ActivationLayers/Softmax/: Softmax.cpp  Softmax.h
Network/layers/BatchNormalizationLayer/: BatchNormalizationLayer.cpp  BatchNormalizationLayer.h
Network/layers/ConvolutionLayer/: CUDAConvolutionLayer.cu  CUDAConvolutionLayer.cuh  ConvolutionLayer.cpp  ConvolutionLayer.h
Network/layers/FFLayer/: FFLayer.cpp  FFLayer.h
Network/layers/FlatteningLayer/: FlatteningLayer.cpp  FlatteningLayer.h
Network/layers/InputLayer/: InputLayer.cpp  InputLayer.h
Network/layers/MaxPoolingLayer/: MaxPoolingLayer.cpp  MaxPoolingLayer.h
Network/layers/OutputLayer/: CUDAOutputLayer.cu  CUDAOutputLayer.cuh  OutputLayer.cpp  OutputLayer.h
Network/layers/RecurrentLayer/: RecurrentLayer.cpp  RecurrentLayer.h
Network/layers/RecurrentLayer/RecurrentOutputLayer/: RecurrentOutputLayer.cpp  RecurrentOutputLayer.h
Network/layers/interfaces/: ActivationLayer.cpp  ActivationLayer.h  ComplexLayer.cpp  ComplexLayer.h  Layer.cpp  Layer.h  Learnable.cpp  Learnable.h
Optimizers/: GeneticOptimizer.cpp  GeneticOptimizer.h  MBGD.cpp  MBGD.h  MomentumGD.cpp  MomentumGD.h
Optimizers/interfaces/: GradientOptimizer.cpp  GradientOptimizer.h  Optimizer.cpp  Optimizer.h
Utils/: Bitmap.cpp  Bitmap.h  BitmapEncodings.h  Utils.cpp  Utils.h
Utils/Differentiables/: DifferentiableFunction.h  Identity.cpp  Identity.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
Utils/Files/: CSVReader.cpp  CSVReader.h  ImageRepresentation.cpp  ImageRepresentation.h  NetFileManager.cpp  NetFileManager.h
Utils/dataStructures/: Bitmap.h  CMakeLists.txt  KDTree.cpp  KDTree.h  PointData.cpp  PointData.h  PrefixSum2D.h  PrefixSum2DArr.h  QuadTree.cpp  QuadTree.h  TMatrix.cpp  TMatrix.h  Tensor.h  Vector2.h  Vector2f.cpp  Vector2f.h  Vector3.h  Vector4.h  VectorN.h
Utils/interfaces/: Clonable.h  JSONEncodable.h
mainExecutable/: CMakeLists.txt  main.cpp
neuralAlgorithms/: CMakeLists.txt
neuralAlgorithms/geneticLearning/: CMakeLists.txt  GeneticLearningUnit.cpp  GeneticLearningUnit.h
neuralAlgorithms/neuralNetwork/: CMakeLists.txt  Net.cpp  Net.h
neuralAlgorithms/neuralNetwork/netStructure/ConvolutionLayer/: CLayer.cpp  CLayer.h
neuralAlgorithms/neuralNetwork/netStructure/FFLayer/: FFLayer.cpp  FFLayer.h
neuralAlgorithms/neuralNetwork/netStructure/Layer/: Layer.h
neuralAlgorithms/neuralNetwork/netStructure/PoolingLayer/: PoolingLayer.cpp  PoolingLayer.h
neuralAlgorithms/neuralNetwork/utils/: Functions.cpp
neuralAlgorithms/neuralNetwork/utils/dataStructures/: Matrix.h  Tensor.cpp  Tensor.h
neuralNetwork/: CMakeLists.txt  Net.cpp  Net.h
neuralNetwork/activations/: ActivationFunction.h  ReLUFunction.h  SigmoidFunction.h
neuralNetwork/dataStructures/: Matrix.cpp  Tensor.cpp  Tensor.h
neuralNetwork/netStructure/: CMakeLists.txt  ConvolutionKernel.h  ConvolutionLayer.h  FFLayer.h  FFNeuron.h  Layer.h
neuralNetwork/netStructure/ConvolutionLayer/: CLayer.cpp  CLayer.h  CMakeLists.txt
neuralNetwork/netStructure/FFLayer/: CMakeLists.txt  FFLayer.cpp  FFLayer.h
neuralNetwork/netStructure/Layer/: CMakeLists.txt  Layer.h
neuralNetwork/sourceFiles/: Layer.cpp
neuralNetwork/utils/: Functions.cpp  Functions.h
neuralNetwork/utils/dataStructures/: Matrix.cpp  Matrix.h  Tensor.cpp  Tensor.h
